--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_webview_plugin: ^0.3.0+2
+  dio: ^1.0.12
+  http: ^0.12.0
 
 dev_dependencies:
   flutter_test:
